--- a/real/index.html
+++ b/real/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <form class="hidden" id="login-form">
+    <div id="clock">00:00</div>
+    <form id="login-form" class="hidden">
       <input
         required
         maxlength="15"
@@ -16,8 +17,7 @@
       />
       <input type="submit" value="Log in" />
     </form>
-    <h2 id="clock">00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
+    <div id="greeting" class="hidden"></div>
     <form id="todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter button" />
       <input type="submit" name="" id="" />
