--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
       />
       <input type="submit" value="Log in" />
     </form>
-    <div id="greeting" class="hidden"></div>
-    <div id="todo-box">
-      <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter button" />
-        <input type="submit" name="" id="" />
-      </form>
-      <ul id="todo-list"></ul>
+    <div id="greeting" class="hidden">
+      <div id="upper" class="hidden">greeting</div>
+    </div>
+    <div id="todo-window">
+      <div id="upper">To do</div>
+      file edit
+      <div id="todo-box">
+        <form id="todo-form">
+          <input
+            id="form-text"
+            type="text"
+            placeholder="Write a To Do and Press Enter button"
+          />
+          <input id="form-submit" value="ENTER" type="submit" name="" id="" />
+        </form>
+        <ul id="todo-list"></ul>
+      </div>
     </div>
     <div id="quote">
       <span></span>
