--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+    </style>
     <link rel="stylesheet" href="real/css/style.css" />
   </head>
   <body>
-    <div id="clock">00:00</div>
+    <div class="clocks">
+      <div id="clock-hour">hr</div>
+      <div id="clock-min">min</div>
+      <div id="clock-sec">sec</div>
+    </div>
     <form id="login-form" class="hidden">
       <input
         required
@@ -18,19 +25,10 @@
       />
       <input type="submit" value="Log in" />
     </form>
-    <div id="greeting" class="hidden">
-      <div id="upper" class="hidden">greeting</div>
-    </div>
     <div id="todo-window">
-      <div id="upper">To do</div>
-      file edit
       <div id="todo-box">
         <form id="todo-form">
-          <input
-            id="form-text"
-            type="text"
-            placeholder="Write a To Do and Press Enter button"
-          />
+          <input id="form-text" type="text" placeholder="Write a To Do" />
           <input id="form-submit" value="ENTER" type="submit" name="" id="" />
         </form>
         <ul id="todo-list"></ul>
@@ -44,6 +42,7 @@
       <span></span>
       <span></span>
     </div>
+    <div id="greeting" class="hidden"></div>
     <script src="real/js/clock.js"></script>
     <script src="real/js/greetings.js"></script>
     <script src="real/js/quote.js"></script>
