챌린지 완료!!!!
🔥

--- a/real/index.html
+++ b/real/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div id="clock">00:00</div>
+    <div id="clock"></div>
     <form id="login-form" class="hidden">
       <input
         required
