--- a/index.html
+++ b/index.html
@@ -11,38 +11,50 @@
     <link rel="stylesheet" href="real/css/style.css" />
   </head>
   <body>
-    <div class="clocks">
-      <div id="clock-hour">hr</div>
-      <div id="clock-min">min</div>
-      <div id="clock-sec">sec</div>
+    <div id="clock-line">
+      <div class="clocks">
+        <div id="clock-hour">hr</div>
+        <div id="clock-min">min</div>
+        <div id="clock-sec">sec</div>
+      </div>
+      <div id="line"></div>
     </div>
-    <form id="login-form" class="hidden">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log in" />
-    </form>
-    <div id="todo-window">
-      <div id="todo-box">
-        <form id="todo-form">
-          <input id="form-text" type="text" placeholder="Write a To Do" />
-          <input id="form-submit" value="ENTER" type="submit" name="" id="" />
+    <div class="except-clock">
+      <div id="line2"></div>
+      <div class="quote-weather">
+        <div id="quote">
+          <span></span>
+          <span></span>
+        </div>
+        <div id="weather">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <div id="todo-window">
+        <div id="todo-box">
+          <form id="todo-form">
+            <input id="form-text" type="text" placeholder="Write a To Do" />
+            <input id="form-submit" value="ENTER" type="submit" name="" id="" />
+          </form>
+          <ul id="todo-list"></ul>
+        </div>
+      </div>
+      <div class="login-box">
+        <form id="login-form" class="hidden">
+          <input
+            id="login-text"
+            required
+            maxlength="15"
+            type="text"
+            placeholder="What is your name?"
+          />
+          <input type="submit" value="Log in" id="login-submit" />
         </form>
-        <ul id="todo-list"></ul>
+        <div id="greeting" class="hidden"></div>
       </div>
     </div>
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
-    <div id="weather">
-      <span></span>
-      <span></span>
-    </div>
-    <div id="greeting" class="hidden"></div>
     <script src="real/js/clock.js"></script>
     <script src="real/js/greetings.js"></script>
     <script src="real/js/quote.js"></script>
